# capstone-test2

./: .gitignore
backend/: logger_rule.md  pyproject.toml
backend/app/: main.py
backend/app/ai/: collector.py  models.py  prediction.py  scaler.pkl  scaler_kr.pkl  scaler_nas.pkl  stock_model.pth  stock_model_kr.pth  stock_model_nas.pth  train.py  train_advanced.py  utils.py
backend/app/core/: config.py  database.py  decryption.py  lifespan.py
backend/app/core/security/: dependencies.py  hashing.py  token.py
backend/app/data/stocks/: kosdaq_code.mst
backend/app/master/: NASMST.COD  kosdaq_code.mst  kospi_code.mst
backend/app/models/: __init__.py  kis_token.py  refresh_token.py  social_account.py  user.py  user_favorite.py  user_favorite_group.py  user_virtual.py
backend/app/routers/: user_favorite_group.py  user_profile.py
backend/app/routers/auth/: token.py  user_general.py  user_social.py
backend/app/routers/invest/: user_virtual.py
backend/app/routers/stock/: ai.py  info.py  ranking.py  realtime.py  search.py
backend/app/schemas/: token.py  user.py  user_favorite.py  user_favorite_group.py  user_virtual.py
backend/app/services/invest/: user_virtual.py
backend/app/services/kis/: auth.py  data.py  stock_info.py  stock_search.py  websocket.py
backend/app/services/kis/ranking/: amount.py  base.py  fluctuation.py  market_cap.py  volume.py
backend/app/services/user/: general.py  social.py  token.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Header.jsx  Logo.jsx  (+3 more)
(+36 files in other folders)
